LASB-4654: Enforce request validation constraints in acknowledgement endpoints
Add constraints to request fields for FDC Contribution endpoint.
Add constraints to request fields for Concor Contribution endpoint.
Update validation exception formatting.
Add unit tests to cover validation scenarios.